--- a/src/pages/Hero/Hero.css
+++ b/src/pages/Hero/Hero.css
@@ -169,7 +169,7 @@
 .hero-image-container {
   position: absolute;
   right: -50px;
-  top: 100px;
+  bottom: -14px;
   width: 683px;
   height: 870px;
   pointer-events: none;
@@ -213,7 +213,7 @@
 @media (max-width: 768px) {
   .hero                 { height: auto; padding: 100px 0; }
   .hero-container       { flex-direction: column; text-align: center; }
-  .hero-image-container { position: relative; width: 100%; right: 0; top: 0; margin-top: 50px; }
+  .hero-image-container { position: relative; width: 100%; right: 0; margin-top: 50px; animation: scaleUpFade 1.2s var(--ease-spring) 0.2s forwards !important; }
   .hero-title           { font-size: 38px; line-height: 50px; }
   .hero-subtitle        { font-size: 26px; }
   .hero-cta-group       { justify-content: center; flex-wrap: wrap; }
